--- a/Library8Bit/project.json
+++ b/Library8Bit/project.json
@@ -1,14 +1,15 @@
 {
   "version": "1.0.0-*",
-
   "dependencies": {
     "LibraryCSUtils": "1.0.0-*",
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.6.1"
   },
-
   "frameworks": {
     "netstandard1.6": {
       "imports": "dnxcore50"
     }
+  },
+  "buildOptions": {
+    "define": []
   }
 }
