--- a/MediaViewer8Bit/project.json
+++ b/MediaViewer8Bit/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-*",
   "buildOptions": {
     "emitEntryPoint": true
@@ -6,15 +6,18 @@
 
   "dependencies": {
     "Library8Bit": "1.0.0-*",
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.1"
-    }
+    "Microsoft.NETCore.App": "1.1.0"
   },
 
   "frameworks": {
     "netcoreapp1.0": {
       "imports": "dnxcore50"
     }
+  },
+
+  "runtimes": {
+    "win7-x64": {}, 
+    "win10-x64": {}, 
+    "osx.10.10-x64": {}
   }
 }
