--- a/CaetanoSoft.Era8bit.Library/CaetanoSoft.Era8bit.Library.csproj
+++ b/CaetanoSoft.Era8bit.Library/CaetanoSoft.Era8bit.Library.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>CaetanoSoft.Era8bit</RootNamespace>
     <Authors>José Caetano Silva</Authors>
     <Company>CaetanoSoft</Company>
